# moving-target-tsp

./: CMakeLists.txt  Doxyfile  README  common_calculation_functions.cc  common_calculation_functions.hh  exhaustive-search-gui.cc  exhaustive-search.cc  hip2parser_TEST.cc  main.cc  moving-target-tsp-cli.cc  moving-target-tsp.cc  star.cc  star.hh  star_TEST.cc  target.hh
base/: computation_manager.cc  computation_manager.hh  computation_manager_TEST.cc  data_loader_csv.cc  data_loader_hipparcos.cc  data_loader_simbad.cc  data_loader_simbad.hh  exhaustive_search.cc  exhaustive_search.hh  exhaustive_search_recursive.cc  exhaustive_search_recursive.hh  exhaustive_search_recursive_TEST.cc  moves.hh  moving_target_tsp.cc  moving_target_tsp.hh  simulated_annealing.cc  simulated_annealing.hh  target.hh  target_data.hh
cli/: exhaustive-search.cli  moving-target-tsp.cli  patch-source.sh  regenerate.sh
contrib/hip-coordinate-converter/: create_coords2.c  create_coords2.sh
data/: concrete-tour-01.mttsp  concrete-tour-02.mttsp  concrete-tour-03.mttsp  concrete-tour-04.mttsp  concrete-tour-05.mttsp  concrete-tour-06.mttsp  corona.xcf  datafile1HostStars.txt  datafile1HostStars_simbadQueries.txt  generate_kepler_simbad_queries.awk  sources.txt  test-01.csv
gui/: computation_manager.cc  computation_manager.hh  computation_manager_TEST.cc  computation_thread.cc  computation_thread.hh  data_loader_csv.cc  data_loader_csv.hh  data_loader_hipparcos.cc  data_loader_hipparcos.hh  data_loader_simbad.cc  data_loader_simbad.hh  exhaustive_search.cc  exhaustive_search.hh  exhaustive_search_recursive.cc  exhaustive_search_recursive.hh  exhaustive_search_recursive_TEST.cc  main.ui  main_window.cc  main_window.hh  parser_thread.hh  simple.ui  simulated_annealing.cc  simulated_annealing.hh  simulated_annealing_cooling_schedule.ui  simulated_annealing_paradiseo.hh  star.cc  star.hh  star_TEST.cc  target_data.hh  target_data_filter_proxy_model.cc  target_data_filter_proxy_model.hh  target_manager.cc  target_manager.hh  target_manager.ui  target_manager_TEST.cc  viewer_widget.cc  viewer_widget.hh
icons/: icons.qrc
parser/: csv.cc  csv.hh  hip.cc  hip.hh  hip2.cc  hip2.hh  hip2_TEST.cc  hipparcos.struct  hipparcos_gen_parser.py
sources/: file_source.hh
utils/: common_calculation_functions.cc  common_calculation_functions.hh
